css/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --clr1: #111213;
  --clr2: #212224;
  --clr3: #1e1f21;
  --clr4: #38bdf8;
  --clr5: #6366f1;
  --clr6: #9ca3af;
  --clr7: #f3f4f6;
}

/* */

html {
  height: 100%;
}

body {
  font-family: "Poppins", sans-serif;
  color: var(--clr7);
  background: var(--clr1);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

h1 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  color: var(--clr7);
  margin-bottom: 1rem;
}

h2 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: var(--clr7);
  margin-bottom: 0.5rem;
}

h3 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: var(--clr7);
  margin-bottom: 0.25rem;
}

p {
  font-size: 1.125rem;
  line-height: 1.75rem;
  color: var(--clr7);
  margin-bottom: 0.15rem;
}

a {
  text-decoration: none;
  color: var(--clr6);
}

a:hover,
a:focus {
  color: var(--clr7);
}

li {
  list-style: none;
}

time {
  color: var(--clr7);
}

section {
  padding: 20px;
}

/* Navbar */

.navbar {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  background-image: linear-gradient(45deg, var(--clr1), var(--clr3));
  padding: 10px 20px;
}

.logo a {
  color: var(--clr7);
}

.nav {
  display: flex;
  flex-wrap: wrap;
  margin-left: auto;
  justify-content: center;
  align-items: center;
  gap: 1em;
}

@media (max-width: 640px) {
  .navbar {
    gap: 0.7em;
  }
  .nav {
    flex-direction: column;
    gap: 0.5em;
  }
}

.nav a:hover {
  color: var(--clr7);
}

/* Home */

.home {
  background: var(--clr1);
}

.home .intro {
  display: flex;
  margin-bottom: 25px;
  padding: 50px 0px;
}

.home .intro h1 {
  text-align: left;
  margin-bottom: 0.25em;
}

.home .intro p {
  text-align: left;
  margin-bottom: 0.25em;
  color: var(--clr6);
}

.home .intro div {
  width: 65%;
}

.btn {
  padding: 15px;
  font-weight: 600;
  border-radius: 10px;
}

.btn-primary {
  background-image: linear-gradient(200deg, var(--clr4), var(--clr5));
  color: var(--clr7);
}

.btn-primary:hover,
.btn-primary:focus {
  background-image: linear-gradient(90deg, var(--clr4), var(--clr5));
}

.btn-outline {
  background-image: linear-gradient(90deg, var(--clr1), var(--clr3));
}

.btn-outline:hover,
.btn-outline:focus {
  background-image: linear-gradient(200deg, var(--clr1), var(--clr3));
}

@media (max-width: 640px) {
  .home .intro div {
    width: 100%;
  }
}

/* Blog */
.blog {
  background: var(--clr1);
}

.blog h1 {
  margin-bottom: 1.25rem;
}

/* PostList */

.postlist {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.card {
  display: flex;
  gap: 5px;
  background-image: linear-gradient(90deg, var(--clr2), var(--clr1));
}

.card-content {
  display: flex;
  flex-direction: column;
  width: 50%;
  padding: 1rem;
}

.card-cover {
  width: 50%;
  border: 4px solid transparent;
  border-right: #212224;
  border-image: linear-gradient(90deg, var(--clr4), var(--clr5));
  border-image-slice: 1;
}

.card-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.card-content .desc {
  font-size: 0.9rem;
}

@media (max-width: 640px) {
  .postlist {
    grid-template-columns: 1fr;
  }
  .card {
    flex-direction: column;
    background-image: linear-gradient(20deg, var(--clr2), var(--clr1));
  }
  .card-cover {
    width: 100%;
    border-bottom: var(--clr2);
    border-right: 4px solid transparent;
  }
  .card-content {
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .card {
    flex-direction: column;
    background-image: linear-gradient(20deg, var(--clr2), var(--clr1));
  }
  .card-cover {
    width: 100%;
    border-bottom: var(--clr2);
    border-right: 4px solid transparent;
  }
  .card-content {
    width: 100%;
  }
}

/* Post */

.post {
  background: var(--clr1);
  max-width: 1000px;
  margin: 0 auto;
}

.post img {
  width: 100%;
  object-fit: cover;
}

.flex {
  display: flex;
  gap: 1rem;
  text-align: center;
}

/* Footer */

.footer {
  width: 100%;
  margin-top: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  background-image: linear-gradient(45deg, var(--clr1), var(--clr3));
  padding: 10px 20px;
}

/* TagsPage */

.posts {
  margin: 15px 0;
}

/* All Tags Page */

.taglist {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  flex-wrap: wrap;
}

.taglist a {
  border: 2px solid var(--clr7);
  border-radius: 5px;
  padding: 10px;
}

/* Post Page */

.post h1 {
  margin-bottom: 5px;
}

.post hr {
  margin: 5px 0;
}

/* 404 */
.not-found a {
  margin: 2px solid var(--clr7);
}

